# proxyfor

./: .dockerignore  Cargo.toml  Dockerfile  Dockerfile-release  README.md
.github/workflows/: ci.yaml  release.yaml
assets/: index.html  install-certificate.html  install-certificate.md  md2html.sh  proxyfor-ca-cert.cer  proxyfor-key.pem  webui.html
src/: cert.rs  certificate_authority.rs  cli.rs  filter.rs  lib.rs  main.rs  recorder.rs  rewind.rs  server.rs  state.rs  traffic.rs  tui.rs  utils.rs
tests/: cert.rs  common.rs  filter.rs  proxy.rs  web.rs
tests/fixtures/: generate_cert.sh  proxyfor-ca-cert.cer  proxyfor-key.pem
tests/snapshots/: cert__cert_page.snap  cert__cert_pem.snap  filter__mime_filter.snap  filter__title_filter.snap  web__get_traffic.snap  web__list_traffics.snap  web__subscribe_traffics.snap  web__subscribe_websocket.snap
