[package]
name = "forproxy"
version = "0.1.0"
edition = "2021"
authors = ["sigoden <sigoden@gmail.com>"]
description = "A simple and portable proxy for capturing HTTP and HTTPS traffic."
license = "MIT OR Apache-2.0"
homepage = "https://github.com/sigoden/forproxy"
repository = "https://github.com/sigoden/forproxy"
categories = ["command-line-utilities"]
keywords = ["proxy", "mitm", "https", "http"]

[dependencies]
anyhow = "1.0"
async-compression = { version = "0.4.6", features = ["brotli", "gzip", "deflate", "tokio"] }
bytes = "1.5"
clap = { version = "4.5.1", features = ["derive"] }
dirs = "5.0.1"
fancy-regex = "0.13.0"
hexplay = "0.3.0"
http = "1.1.0"
http-body-util = "0.1"
hyper = { version = "1.0", features = ["client", "http1", "server"] }
hyper-rustls = { version = "0.26.0", default-features = false, features = ["webpki-roots", "webpki-tokio", "ring", "http1", "tls12"] }
hyper-util = { version = "0.1", features = ["server", "http1", "client-legacy"] }
moka = { version = "0.12.5", features = ["future"] }
rand = "0.8.5"
rcgen = { version = "0.13.0", features = ["x509-parser"] }
rsa = "0.9.6"
rustls-pemfile = "2.0.0"
socket2 = "0.5.6"
time = "0.3.34"
tokio = { version = "1", features = ["rt-multi-thread", "net", "macros", "fs", "io-util", "signal"]}
tokio-util = { version = "0.7",  features = ["io-util", "compat"] }
tokio-rustls = "0.25.0"

[profile.release]
lto = true
strip = true
opt-level = "z"

[patch.crates-io]
rcgen = { git = "https://github.com/rustls/rcgen", branch = "main" }
