[package]
name = "proxyfor"
version = "0.2.0"
edition = "2021"
authors = ["sigoden <sigoden@gmail.com>"]
description = "A simple and portable proxy for capturing HTTP and HTTPS traffic."
license = "MIT OR Apache-2.0"
homepage = "https://github.com/sigoden/proxyfor"
repository = "https://github.com/sigoden/proxyfor"
categories = ["command-line-utilities"]
keywords = ["proxy", "mitm", "https", "http"]

[dependencies]
anyhow = "1.0"
async-compression = { version = "0.4.6", features = ["brotli", "gzip", "deflate", "tokio"] }
base64 = "0.22.0"
bytes = "1.5"
clap = { version = "4.5.1", features = ["derive"] }
cookie = "0.18.0"
dirs = "5.0.1"
fancy-regex = "0.13.0"
futures-util = "0.3.30"
http = "1.1.0"
http-body-util = "0.1"
hyper = { version = "1.0", features = ["full"] }
hyper-rustls = { version = "0.27.0", default-features = false, features = ["webpki-roots", "webpki-tokio", "aws-lc-rs", "http1", "http2", "tls12"] }
hyper-util = { version = "0.1", features = ["server-auto", "client-legacy"] }
hyper-tungstenite = "0.13.0"
indexmap = { version = "2.2.5", features = ["serde"] }
moka = { version = "0.12.5", features = ["future"] }
pin-project-lite = "0.2.13"
pretty-hex = "0.4.1"
rand = "0.8.5"
rcgen = { version = "0.13.0", default-features = false, features = ["x509-parser", "pem", "aws_lc_rs"] }
rustls-pemfile = "2.0.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = { version = "1.0.114", features = ["preserve_order"] }
time = "0.3.34"
tokio = { version = "1", features = ["rt-multi-thread", "net", "macros", "fs", "io-util", "signal"]}
tokio-graceful = "0.1.6"
tokio-util = { version = "0.7",  features = ["io-util", "compat"] }
tokio-rustls = "0.26.0"
tokio-stream = { version = "0.1.14", default-features = false, features = ["sync"] }
tokio-tungstenite = { version = "0.21.0", features = ["rustls-tls-webpki-roots"] }
url = "2.5.0"

[dev-dependencies]
async-http-proxy = { version = "1.2.5", features = ["runtime-tokio"] }
insta = "1.36.1"
pretty_assertions = "1.4.0"
reqwest = { version = "0.12.2", features = ["rustls-tls", "stream"], default-features = false }

[profile.release]
lto = true
strip = true
opt-level = "z"
